--- a/pom.xml
+++ b/pom.xml
@@ -100,8 +100,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>11</release>
-        </configuration>
+          <source>1.8</source>
+        <target>1.8</target>
+        <verbose>true</verbose>
+    </configuration>
       </plugin>
         </plugins>
     </build>
